--- a/section 3/blackjackGame/style.css
+++ b/section 3/blackjackGame/style.css
@@ -1,7 +1,7 @@
 body{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
-    background-image: url("images/pool-table.png");
+    background-image: url("images/istockphoto-1079751628-612x612.jpg");
     background-size: cover;
     color: white;
     font-weight: bold;
