--- a/section 3/blackjackGame/style.css
+++ b/section 3/blackjackGame/style.css
@@ -38,3 +38,10 @@ h1{
 .btn:hover{
     background: rgb(196, 147, 25);
 }
+
+.newGame-container{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 300px;
+}
